# LaserTag

./: .gitignore  CMakeLists.txt
header/: game.h  player.h  server.h
src/: game.cpp  main.cpp  player.cpp  server.cpp
